@@ -1,6 +1,5 @@
 The one, true implementation of the AWK pattern-directed scanning and
-processing language, by one of the language's creators, Brian
-Kernighan.  This is the version of awk described in "The AWK
-Programming Language", by Al Aho, Brian Kernighan, and Peter
-Weinberger (Addison-Wesley, 1988, ISBN 0-201-07981-X).
-It is also known as new awk, or nawk.
+processing language, by one of the language's creators, Brian Kernighan.
+This is the version of awk described in "The AWK Programming Language",
+by Al Aho, Brian Kernighan, and Peter Weinberger (Addison-Wesley,
+1988, ISBN 0-201-07981-X).  It is also known as new awk, or nawk.
